<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.musicals.viewmodels.MusicPlayerViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".views.activity.MusicPlayerActivity">


            <TextView
                android:id="@+id/song_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/song_name"
                android:textAlignment="center"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/songArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/artist_name"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="@id/song_Name"
                app:layout_constraintRight_toRightOf="@id/song_Name"
                app:layout_constraintTop_toBottomOf="@id/song_Name" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/default_song_thumbnail"
                app:layout_constraintEnd_toEndOf="@id/songArtist"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent=".5"
                app:layout_constraintStart_toStartOf="@+id/songArtist"
                app:layout_constraintTop_toBottomOf="@+id/songArtist"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent=".8"
                android:contentDescription="@string/music_thumbnail" />

            <ImageButton
                android:id="@+id/playPauseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:src="@drawable/play_pause_button"
                app:layout_constraintEnd_toEndOf="@+id/seekBar"
                app:layout_constraintStart_toStartOf="@+id/seekBar"
                app:layout_constraintTop_toBottomOf="@+id/seekBar"
                android:contentDescription="@string/play_pause_button" />

            <ImageButton
                android:id="@+id/previousSong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:src="@drawable/previous_song_button"
                app:layout_constraintBottom_toBottomOf="@id/playPauseButton"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@id/playPauseButton"
                app:layout_constraintTop_toTopOf="@id/playPauseButton"
                android:contentDescription="@string/previous_button" />

            <ImageButton
                android:id="@+id/nextSong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:src="@drawable/play_next_button"
                app:layout_constraintBottom_toBottomOf="@id/playPauseButton"
                app:layout_constraintLeft_toLeftOf="@id/playPauseButton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/playPauseButton"
                android:contentDescription="@string/next_button" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <TextView
                android:id="@+id/startTiming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time_song"
                app:layout_constraintBottom_toBottomOf="@id/seekBar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/seekBar"
                app:layout_constraintTop_toTopOf="@id/seekBar" />

            <TextView
                android:id="@+id/songDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time_song"
                app:layout_constraintBottom_toBottomOf="@id/seekBar"
                app:layout_constraintLeft_toRightOf="@id/seekBar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/seekBar" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>