<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_background_gradiant"
        tools:context=".views.activity.SplashScreen">

        <FrameLayout
            android:id="@+id/splashAnimationHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:layout_marginBottom="150dp"
            app:layout_constraintTop_toTopOf="parent"
            >

            <ImageView
                android:id="@+id/splashLogo"
                android:layout_width="match_parent"
                android:layout_height="100pt"
                android:src="@drawable/app_logo_splash"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/welcome_screen_animation" />

            <ImageView
                android:id="@+id/splashInnerLogo"
                android:layout_width="131dp"
                android:layout_height="146dp"
                android:layout_gravity="center"
                android:src="@drawable/app_logo_splash_inner"
                android:contentDescription="@string/inner_animation_image" />

        </FrameLayout>

        <TextView
            android:id="@+id/appTitleSplash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold|italic"
            android:textSize="70sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/splashAnimationHolder" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>