<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:elevation="50dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="5dp"
                android:shadowRadius="10">

                <ImageView
                    android:id="@+id/songIcon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@color/themeColorBlue"
                    android:scaleType="centerCrop"
                    android:src="@drawable/music_icon_foreground"
                    android:contentDescription="@string/music_logo_cardview_decription" />

                <TextView
                    android:id="@+id/songName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/songIcon"
                    android:text="@string/music_title_cardview"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/songArtist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/songName"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/songIcon"
                    android:text="@string/music_artist_cardview"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>